# OOP-Lab_5

./: CMakeLists.txt  Cheltuiala.c  Cheltuiala.h  Functii.c  Functii.h  Lista.c  Lista.h  Main.c  Teste.c  Teste.h  UI.c  UI.h  ctrl.c  ctrl.h  errors.h
